
IMPROVEMENTS
~~~~~~~~~~~~

* Subunit now has a setup.py for python deployments that are not using
  distribution packages. (Tres Seaver, #538181)

* Subunit now supports test discovery by building on the testtools support for
  it. You can take advantage of it with "python -m subunit.run discover [path]"
  and see "python -m subunit.run discover --help" for more options.

0.0.5
-----

BUG FIXES
~~~~~~~~~

* make check was failing if subunit wasn't installed due to a missing include
  path for the test program test_child.

* make distcheck was failing due to a missing $(top_srcdir) rune.

IMPROVEMENTS
~~~~~~~~~~~~

* New filter `subunit-notify` that will show a notification window with test 
  statistics when the test run finishes.

* subunit.run will now pipe its output to the command in the 
  SUBUNIT_FORMATTER environment variable, if set.

0.0.4
-----

BUG FIXES
~~~~~~~~~

* subunit2junitxml -f required a value, this is now fixed and -f acts as a
  boolean switch with no parameter.

* Building with autoconf 2.65 is now supported.


0.0.3
-----

  CHANGES:
  
    * License change, by unanimous agreement of contributors to BSD/Apache
      License Version 2.0. This makes Subunit compatible with more testing
      frameworks.

  IMPROVEMENTS:

    * CPPUnit is now directly supported: subunit builds a cppunit listener
      ``libcppunit-subunit``. 

    * In the python API ``addExpectedFailure`` and ``addUnexpectedSuccess``
      from python 2.7/3.1 are now supported. ``addExpectedFailure`` is
      serialised as ``xfail``, and ``addUnexpectedSuccess`` as ``success``.
      The ``ProtocolTestCase`` parser now calls outcomes using an extended
      API that permits attaching arbitrary MIME resources such as text files
      log entries and so on. This extended API is being developed with the
      Python testing community, and is in flux. ``TestResult`` objects that
      do not support the API will be detected and transparently downgraded